# opcua-walker

./: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  TESTING.md  docker-compose.yml  generate_test_certs.sh  start_test_server.sh  test_all.sh  test_call_improvements.md  test_features.sh  test_new_features.md
scripts/: minimal_test_server.py  simple_test_server.py  test_server.py
src/: client.rs  main.rs  types.rs
src/commands/: browse.rs  call.rs  discover.rs  info.rs  mod.rs  read.rs
src/utils/: formatter.rs  mod.rs  search.rs
