[package]
name = "opcua-walker"
version = "0.1.0"
edition = "2024"

[dependencies]
opcua = "0.12"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
colored = "2.0"
tabled = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
