[package]
name = "opcua-walker"
version = "0.2.0"
edition = "2024"
authors = ["OPC-UA Walker Contributors"]
description = "A modern async CLI tool for exploring OPC-UA servers"
license = "MIT"
repository = "https://github.com/Katze719/opcua-walker"

[dependencies]
async-opcua = { version = "0.16", features = ["client"] }
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
colored = "2.1"
tabled = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.21"
